fix team member contact white space

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -302,6 +302,7 @@ blockquote {
   color: inherit;
   padding: 0;
   text-decoration: none;
+  line-height: 2rem;
 }
 
 .team-lixor a[href^="mailto:"]:before, .team-lixor a[href^="tel:"]:before {
